[Assets] Simplify deploy script, update README

--- a/eaa_rhp/eaa_rhp.html
+++ b/eaa_rhp/eaa_rhp.html
@@ -129,7 +129,7 @@ Willem M. Jongman, Department of History
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"width":1920,"height":1080}, queryOptions);
+      var options = extend(defaultOptions, {"width":1920,"height":1080,"transition":"slide"}, queryOptions);
     </script>
 
 
