[Assets] Add vertical structure to RHP presentation

--- a/eaa_rhp/index.html
+++ b/eaa_rhp/index.html
@@ -32,27 +32,31 @@ Willem M. Jongman, Department of History
 - Pontine Region project, _University of Groningen_
 
 ![Project survey areas](images/rhp_areas.png)
-</script></section><section  data-markdown><script type="text/template">
+</script></section><section ><section data-markdown><script type="text/template">
+# Population
+</script></section><section data-markdown><script type="text/template">
 ## Trends in population
 
 ![Population trends](images/population_trends.png)
-</script></section><section  data-markdown><script type="text/template">
+</script></section><section data-markdown><script type="text/template">
 ## Trends in site numbers
 
 ![Site number trends](images/site_number_trends.png)
-</script></section><section  data-markdown><script type="text/template">
+</script></section></section><section ><section data-markdown><script type="text/template">
+# Market integration
+</script></section><section data-markdown><script type="text/template">
 ## Trends in dated amphorae
 
 ![Dated amphorae](images/dated_amphorae.png)
-</script></section><section  data-markdown><script type="text/template">
+</script></section><section data-markdown><script type="text/template">
 ## Trends in provenance
 
 ![Provenance](images/provenance.png)
-</script></section><section  data-markdown><script type="text/template">
+</script></section><section data-markdown><script type="text/template">
 ## Trends in market access
 
 ![Provenance](images/market_access.png)
-</script></section><section  data-markdown><script type="text/template">
+</script></section></section><section  data-markdown><script type="text/template">
 # Conclusions
 
 ### Methodological
