[Assets] Decide on styling, add test presentation

--- a/test/index.html
+++ b/test/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>RHP User meeting</title>
+    <title>Test slides</title>
     <link rel="shortcut icon" href="./../favicon.ico"/>
     <link rel="stylesheet" href="./../dist/reveal.css" />
     <link rel="stylesheet" href="./../dist/theme/white.css" id="theme" />
@@ -15,16 +15,54 @@
     <div class="reveal">
       <div class="slides"><section  data-markdown><script type="text/template">
 
-# RHP User meeting
+# Test slides
 
 Niels Wouda
 
 <br>
 
-06-01-2021
-</script></section><section  data-markdown><script type="text/template">
-# TODO
- </script></section></div>
+28-11-2020
+</script></section><section ><section data-markdown><script type="text/template">
+# First slidedeck
+
+Some text, with `code` and _emphasis_ and **strong**.
+</script></section><section data-markdown><script type="text/template">
+## A vertical slide
+
+- Bullet 1
+- Bullet 2
+</script></section><section data-markdown><script type="text/template">
+## Vertical 2
+
+1. Item 1
+2. Item 2
+</script></section><section data-markdown><script type="text/template">
+## Vertical 3
+
+(from the RHP code)
+
+```python
+from orator.migrations import Migration
+
+
+class CreateTypeColumnArtefactForms(Migration):
+    """
+    Artefact migration.    
+    """
+    
+    def up(self):
+        pass
+
+    def down(self):
+        pass
+```
+</script></section></section><section  data-markdown><script type="text/template">
+# A new section
+
+With some inline $\LaTeX$, like $x = 3$, or
+
+$$f(y) = \int_0^\infty y dy$$
+</script></section></div>
     </div>
 
     <script src="./../dist/reveal.js"></script>
