[Assets] Update test slides to include (almost) everything

--- a/test/index.html
+++ b/test/index.html
@@ -17,27 +17,37 @@
 
 # Test slides
 
-Niels Wouda
-
 <br>
+
+Niels Wouda
 
 28-11-2020
 </script></section><section ><section data-markdown><script type="text/template">
-# First slidedeck
+# First section
 
-Some text, with `code` and _emphasis_ and **strong**.
+Some styling:
+
+`inline code`
+
+_emphasis_
+
+**strong**
+
+~~crossed out~~
+
+<ins>underlined</ins> ([with an HTML tag](https://stackoverflow.com/a/47354053/4316405)).
 </script></section><section data-markdown><script type="text/template">
-## A vertical slide
-
+## Some lists
+ 
 - Bullet 1
 - Bullet 2
-</script></section><section data-markdown><script type="text/template">
-## Vertical 2
+
+and
 
 1. Item 1
 2. Item 2
 </script></section><section data-markdown><script type="text/template">
-## Vertical 3
+## Code
 
 (from the RHP code)
 
@@ -56,12 +66,32 @@ class CreateTypeColumnArtefactForms(Migration):
     def down(self):
         pass
 ```
-</script></section></section><section  data-markdown><script type="text/template">
+</script></section></section><section ><section data-markdown><script type="text/template">
 # A new section
+</script></section><section data-markdown><script type="text/template">
+# Some math
 
-With some inline $\LaTeX$, like $x = 3$, or
+With some inline $\LaTeX$, like $x = 3$, or display math, like
 
 $$f(y) = \int_0^\infty y dy$$
+
+or
+
+$$\sum_{k = 1}^n k = \frac{n(n + 1)}{2} $$</script></section><section data-markdown><script type="text/template">
+# An image
+
+(from the EAA RHP presentation)
+
+![Population trends](images/population_trends.png)
+</script></section><section data-markdown><script type="text/template">
+# A table
+
+| Header 1 | Header 2 |
+| --- | --- |
+| Value 1 | Value 2 |
+| Value 3 | Value 4 |
+</script></section></section><section  data-markdown><script type="text/template">
+# The end
 </script></section></div>
     </div>
 
