[Assets] Continue working on the RHP meeting slides

--- a/rhp_user/index.html
+++ b/rhp_user/index.html
@@ -22,9 +22,46 @@
 Niels Wouda
 
 06-01-2021
+
+<br>
+
+<small>Speaker notes can be accessed via the `s` button</small>
+
+<aside class="notes"><p>This window contains the speaker notes, per slide (some slides do not have notes).
+Keep it open to read along!</p>
+</aside></script></section><section  data-markdown><script type="text/template">
+
+# This meeting
+
+- The RHPdb (briefly)
+
+- Example queries
 </script></section><section  data-markdown><script type="text/template">
-# TODO
- </script></section></div>
+# The RHPdb
+
+The [technical slides](https://nielswouda.com/slides/rhp_tech/) have an in-depth discussion
+of the database schema.
+
+Here we discuss the database content, rather than its structure.
+</script></section><section  data-markdown><script type="text/template">
+## TODO
+</script></section><section ><section data-markdown><script type="text/template">
+# Example queries
+
+(finally!)
+</script></section><section data-markdown><script type="text/template">
+## TODO
+</script></section></section><section  data-markdown><script type="text/template">
+# Questions?
+</script></section><section  data-markdown><script type="text/template">
+# That's all, folks!
+
+- These slides are all online, so you can (re-)read them later.
+ 
+- To facilitate re-use, there are a lot of (speaker) notes in the presentation.
+
+- Anything unclear? Mail me at [nielswouda@gmail.com](mailto:nielswouda@gmail.com). 
+</script></section></div>
     </div>
 
     <script src="./../dist/reveal.js"></script>
