--- a/rhp_user/index.html
+++ b/rhp_user/index.html
@@ -33,19 +33,14 @@ Keep it open to read along!</p>
 
 # This meeting
 
-- The RHPdb (briefly)
+- The [technical slides](https://nielswouda.com/slides/rhp_tech/) discuss the
+database schema. Should we recap?
 
 - Example queries
-</script></section><section  data-markdown><script type="text/template">
-# The RHPdb
 
-The [technical slides](https://nielswouda.com/slides/rhp_tech/) have an in-depth discussion
-of the database schema.
-
-Here we discuss the database content, rather than its structure.
-</script></section><section  data-markdown><script type="text/template">
-## TODO
-</script></section><section ><section data-markdown><script type="text/template">
+<aside class="notes"><p>The technical session was two days ago, so I think I can skip this. If not, 
+start from the technical slides.</p>
+</aside></script></section><section ><section data-markdown><script type="text/template">
 # Example queries
 
 (finally!)
