[Assets] Add slides about the database schema

--- a/rhp_user/index.html
+++ b/rhp_user/index.html
@@ -25,7 +25,7 @@ Niels Wouda
 
 <br>
 
-<small>Speaker notes can be accessed via the `s` button</small>
+<small>Speaker notes can be accessed via the `s` key</small>
 
 <aside class="notes"><p>This window contains the speaker notes, per slide (some slides do not have notes).
 Keep it open to read along!</p>
