--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -25,10 +25,14 @@ Niels Wouda
 
 <br>
 
-<small>Speaker notes can be accessed via the `s` button</small>
+<small>Speaker notes can be accessed via the `s` key</small>
 
 <aside class="notes"><p>This window contains the speaker notes, per slide (some slides do not have notes).
 Keep it open to read along!</p>
+<p>This presentation serves as a complete - albeit high-level - introduction to the
+construction of the RHP database. As such, it has two audiences: <em>archaeologists</em>
+(you) and a future <em>developer</em>. I attempt to document both roles in this process.
+Most of the presentation is kept rather simple, but some jargon is inevitable.</p>
 </aside></script></section><section  data-markdown><script type="text/template">
 # This meeting
 
@@ -43,7 +47,7 @@ leave that up to you.</p>
 </aside></script></section><section ><section data-markdown><script type="text/template">
 # The database
 
-- Tech: PostgreSQL, with PostGIS extension for geodata
+- PostgreSQL, with PostGIS extension for geodata
 - Contains (most of) the TVP, Suburbium, and PRP data
 - New projects should not require changes to the database structure
 
@@ -66,7 +70,90 @@ This is the lay-out of the RHPdb.
 <aside class="notes"><p>We will discuss this in detail in the next few slides, zooming in on each part
 of the database.</p>
 </aside></script></section><section data-markdown><script type="text/template">
+## Projects
+
+- Referenced (almost) everywhere.
+- Documents the specific project a record came from.
+- Currently contains:
+
+| id_project | name | abbreviation |
+|---|-------------------------|-----|
+| 1 | Rome Hinterland Project | rhp |
+| 2 | Pontine Region Project  | prp |
+| 3 | Rome Suburbium Project  | rsp |
+| 4 | Tiber Valley Project    | tvp |
+
+<aside class="notes"><h1 id="why-is-the-rhp-in-here">Why is the RHP in here?</h1>
+<p>The RHP introduces some (location) interpretations and periodisations that are
+not related to the original projects, so we needed a way to track those. Making 
+the RHP into a project was the easiest way to achieve this.</p>
+<p>Plus: the RHP is not special. Our new typologies and interpretations and the like
+are not that different from the project-specific efforts.</p>
+</aside></script></section><section data-markdown><script type="text/template">
 ## Locations
+
+- Various types of locations (`location_types` table). 
+  - Currently: `site`, `subsite`, and `unit`.
+- Locations are hierarchical (`location_hierarchy` table).
+  - Subsites have a site parent.
+  - (Some) units have a site parent.
+- Sites and subsites often have an interpretative aspect, units do not.
+  - Interpretation is stored in the `location_interpretations` table, as one 
+    record per (interpretation, period)-pair.
+- Geodata (`point` and/or `polygon` fields).
+- Example records (shortened, one from each project):
+
+| id_location | id_origin | id_project | point | polygon | id_location_type |
+| --- | --- | --- | --- | --- | --- |
+| 1 | HL09_12947 | 2 | `<binary>` | NULL | 1 |
+| 12615 | I12-22 | 3 | `<binary>` | `<binary>` | 2 |
+| 16794 | 12540 | 4 | `<binary>` | NULL | 1 |
+
+<aside class="notes"><p>Many examples of hierarchical locations from each project. E.g.:</p>
+<ul>
+<li>TVP has the Veii site, and various sites within it. Veii is a site in the RHP,
+the sites (TVP) within it are subsites (RHP). We use the hierarchy to link them.</li>
+<li>The subsite terminology is inspired by the Suburbium project, where it is
+ubiquitous. Subsites are linked to sites via the hierarchy.</li>
+<li>The PRP has units and sites, where sites might span many units - that&#39;s again
+linked via the hierarchy.</li>
+</ul>
+<p>The example records excludes the <code>extent</code> and <code>notes</code> fields because that would 
+not fit, and they are empty for these records.</p>
+<p>Notice the <code>id_origin</code> field. Your original data is never far away!</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Location interpretations
+
+- Like TVP's `tvp_interpretation` and PRP's `prp_source_site_interpretation`.
+- Flexible. A location can have one or more records for:
+  - One or more interpretations over one or more periods, indicating site development, or multiple simultaneous roles.
+  - No interpretation over one or more periods, indicating existence but no clear role.
+  - One or more interpretations over no periods, indicating a role but unclear time delineation.
+- Certainties for the assigned period and interpretation.
+  - Currently one of `certain`, `probable`, and `uncertain`.
+- Example record (shortened):
+
+| id_location_interpretation | id_location | id_period | id_period_certainty | id_project |
+| --- | --- | --- |  --- | --- |
+| 1 | 825 | 14 | 2 | 2 |
+
+<aside class="notes"><p>Interpretations are done per period, where a period is historical. This is 
+different than e.g. the Suburbium data, so we did some mapping there.</p>
+<p>Corresponding tables are:</p>
+<ul>
+<li><code>prp_source_site_interpretation</code> (PRP)</li>
+<li><code>tvp_interpretation</code> (TVP)</li>
+<li><code>chronology</code> (RSP)</li>
+</ul>
+<p>The example record excludes the <code>notes</code>, <code>id_interpretation</code>, and 
+<code>id_interpretation_certainty</code> fields, because otherwise the table would not fit.
+Their meaning is hopefully straightforward.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Interpretations
+
+TODO
+</script></section><section data-markdown><script type="text/template">
+## Periods
 
 TODO
 </script></section><section data-markdown><script type="text/template">
@@ -216,10 +303,10 @@ these types are all under the &#39;Funeral&#39; parent.</p>
 add records with this interpretation as an RHP record with the type indicated
 by the <em>rhp</em> column. That leads to a bit of &#39;duplication&#39; (depending on your 
 perspective), but much more effective querying.</p>
-<p>Out names are always close to the <em>in</em> name - <em>rhp</em> names not necessarily!</p>
+<p>Out names are always similar to the <em>in</em> name - <em>rhp</em> names not necessarily!</p>
 <p>We only add something on top of project-specific data. This means you can query
-both by the project-specific interpretations (if you know them), or use our
-hierarchy to get the right results.</p>
+both by the project-specific interpretations of the <em>out</em> column (if you know
+them), or use our hierarchy to get the right results.</p>
 <p>This example only discusses the interpretations, but the same holds for
 periodisations.</p>
 </aside></script></section><section data-markdown><script type="text/template">
