[Assets] Add examples to user slides

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -51,9 +51,11 @@ leave that up to you.</p>
 - Contains (most of) the TVP, Suburbium, and PRP data
 - New projects should not require changes to the database structure
 
-<aside class="notes"><p>The tech stack is a simple SQL database, not unlike Access. PostGIS adds support
-for querying and storing geodata. That can be used directly (not recommended),
-or through another tool like gis.</p>
+<aside class="notes"><p>The tech stack is a simple SQL database. We use Postgres, which is similar to 
+Access (but does not come bundled with a viewer/visual query builder). PostGIS
+adds support for querying and storing geodata. That can be used directly, or 
+through some other tool (GIS/Python). The mapping process and database 
+versioning are done with Python (more in a few slides).</p>
 <p>Most data have been mapped over, in particular location data, site
 interpretations, and many diagnostics and other finds. Activities and survey
 methodologies/conditions have not been mapped over in this pilot.</p>
