[Assets] Update RHP schema

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -65,9 +65,9 @@ Of course, the mapping process is still very laborious.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Schema
 
-This is the lay-out of the RHPdb.
-
-![Schema](images/schema.png)
+<img width="85%" 
+     src="images/schema.svg" 
+     style="transform: rotate(90deg);  margin-top: -400px;" />
 
 <aside class="notes"><p>We will discuss this in detail in the next few slides, zooming in on each part
 of the database.</p>
