[Assets] Copy over RHP schema

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -69,6 +69,9 @@ Of course, the mapping process is still very laborious.</p>
      src="images/schema.svg" 
      style="transform: rotate(90deg);  margin-top: -400px;" />
 
+<!--- This is a huge hack but ensures reveal-md actually copies the svg file -->
+<!--- ![Schema](images/schema.svg) --->
+
 <aside class="notes"><p>We will discuss this in detail in the next few slides, zooming in on each part
 of the database.</p>
 </aside></script></section><section data-markdown><script type="text/template">
