--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -127,7 +127,8 @@ ubiquitous. Subsites are linked to sites via the hierarchy.</li>
 linked via the hierarchy.</li>
 </ul>
 <p>The example records excludes the <code>extent</code> and <code>notes</code> fields because that would 
-not fit, and they are empty for these records.</p>
+not fit, and they are empty for these records. In <code>notes</code> we place existing 
+notes, and sometimes a new note explaining some mapping detail.</p>
 <p>Notice the <code>id_origin</code> field. Your original data is never far away!</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Location interpretations
@@ -369,7 +370,17 @@ So now we have some mappings in (Excel) data files.. what's next?
 - The RHPdb is completely reversible: adding and removing project data is fully
   supported. That is useful when developing adding new projects/data.
 
-<aside class="notes"><p>TODO</p>
+<aside class="notes"><p>The reason each project has its own mappers is that there is quite a bit of
+customer work needed to map all data over. Some projects store things <em>very</em>
+differently from how we designed the RHPdb, which means we need to write some
+code handling that diversity.</p>
+<p>This means new code will likely be necessary for future projects. A lot of
+existing work can likely be re-used in that case as well: this is already the
+case with the existing three projects as well.</p>
+<p>The RHPdb is the end result of these mappers. As such I never modify anything in
+the RHPdb itself: if something needs to be changed, a mapping or mapper should
+be updated instead. Sometimes the project databases are the ones that need to be
+updated (when we discover a mistake there). Never the RHPdb.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Developing mappers
 
@@ -393,45 +404,35 @@ class Mapper:
         self.write_connection().table(self.to_table).delete()
 ```
 
-<aside class="notes"><p>TODO</p>
+<aside class="notes"><p>A mapper has two tasks, depending on what you want to do:</p>
+<ul>
+<li>Insert its data into the appropriate RHP table</li>
+<li>Remove that data</li>
+</ul>
+<p>These two tasks are implemented in the <code>up</code> (insert) and <code>down</code> (remove)
+methods. Both have defaults that are somewhat simplified here. <code>down</code> is less
+important: I have never had to implement it differently. <code>up</code> is less clear cut,
+and we will discuss that next.</p>
+<p><code>up</code> has three steps: first, <code>_read</code> the data from project-specific table(s),
+then <code>_map</code> (transform) that data into something the RHPdb understands, and 
+finally <code>_write</code> that transformed data to the RHPdb table. Each of these methods
+have defaults, but those are not always sufficient: in particular <code>_map</code> is
+often overwritten.</p>
+<p>Observe that the Mapper class has some member data: <code>from_tables</code>, a list of
+table names in the project database that must be mapped, <code>to_table</code>, the name of
+the RHPdb table, and <code>field_mapping</code>, which is a (loose) mapping of
+project-specific column names to RHPdb column names.</p>
+<p>The full <code>Mapper</code> class has a few other methods that help implementing mappers,
+but are not as important to discuss here explicitly.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## A mapper example
 
 - Now that we have a basic understanding of the mapper structure, we can look
   at a simple example.
-- This Suburbium mapper is responsible for mapping over all ARS artefacts:
+- This mapper is TODO:
 
 ```python
-class AfricanRedSlipMapper(Mapper):
-    from_tables = ['mat_datanti']
-    to_table = 'artefacts'
-    field_mapping = {
-        'id_artefact_form': 'id_artefact_form',
-        'id_datanti': 'id_origin',
-    }
-
-    def _read(self):
-        # Based on MCC's comment in #84 - all ARS is SIGILLATA AFRICANA.
-        return [datum for datum in super()._read()
-                if datum['produzione'].startswith('AFRICANA')
-                if datum['classe'] == 'SIGILLATA']
-
-    def _map(self, data):
-        types = self._typology()
-
-        for datum in data:
-            datum['id_artefact_form'] = types[datum['tipo'].strip()]
-
-        return super()._map(data)
-
-    def _typology(self):
-        name2id = (self.write_connection()
-                   .table('artefact_forms')
-                   .get()
-                   .pluck('id_artefact_form', 'name'))
-
-        return {datum['in']: name2id[datum['out']] 
-                for datum in read_excel(self._project, 'african_red_slip.xlsx')}
+# TODO
 ```
 
 <aside class="notes"><p>Simplified in parts to ease understanding.</p>
@@ -472,7 +473,7 @@ class CreateActors(Migration):
     def up(self):
         with self.schema.create('actors') as table:
             table.increments('id_actor')
-            table.string('name', 64)
+            table.string('name', 128)
 
     def down(self):
         self.schema.drop_if_exists('actors')
