[Assets] Update contact info

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -568,7 +568,7 @@ explained there.</p>
 - To facilitate re-use, there are a lot of speaker notes in the presentation.
 
 - Anything unclear? Mail me at [nielswouda@gmail.com](mailto:nielswouda@gmail.com), 
-  or through the GitHub repository. 
+  or contact me through the GitHub repository. 
 </script></section></div>
     </div>
 
