--- a/rhp_user/index.html
+++ b/rhp_user/index.html
@@ -119,8 +119,8 @@ TODO
  
 - To facilitate re-use, there are a lot of (speaker) notes in the presentation.
 
-- Anything unclear? Mail me at [nielswouda@gmail.com](mailto:nielswouda@gmail.com). 
-</script></section></div>
+- Anything unclear? Mail me at [nielswouda@gmail.com](mailto:nielswouda@gmail.com), 
+  or contact me through the GitHub repository. </script></section></div>
     </div>
 
     <script src="./../dist/reveal.js"></script>
