[Assets] Complete tech presentation

--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -106,13 +106,13 @@ are not that different from the project-specific efforts.</p>
   - Interpretation is stored in the `location_interpretations` table, as one 
     record per (interpretation, period)-pair.
 - Geodata (`point` and/or `polygon` fields).
-- Example records (shortened, one from each project):
+- Examples (shortened, one from each project):
 
 | id_location | id_origin | id_project | point | polygon | id_location_type |
 | --- | --- | --- | --- | --- | --- |
-| 1 | HL09_12947 | 2 | `<binary>` | NULL | 1 |
+| 1 | HL09_12947 | 2 | `<binary>` | | 1 |
 | 12615 | I12-22 | 3 | `<binary>` | `<binary>` | 2 |
-| 16794 | 12540 | 4 | `<binary>` | NULL | 1 |
+| 16794 | 12540 | 4 | `<binary>` | | 1 |
 
 <aside class="notes"><p>Many examples of hierarchical locations from each project. E.g.:</p>
 <ul>
@@ -135,7 +135,7 @@ mapping detail.</p>
 - Flexible.
 - Certainties for the assigned period and interpretation.
   - Currently one of `certain`, `probable`, and `uncertain`.
-- Example record (shortened):
+- Example (shortened):
 
 | id_location_interpretation | id_location | id_period | id_period_certainty | id_project |
 | --- | --- | --- |  --- | --- |
@@ -155,14 +155,13 @@ Their meaning is hopefully straightforward.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Interpretations
 
-- List of interpretations, per project. Example records (shortened):
+- List of interpretations, per project. Examples (shortened):
 | id_interpretation | name | id_project | definition |
 | --- | --- | --- | --- |
 | 6 | Infrastructure | 1 | `<text>` |
 | 22 | Travel and transport | 1 | `<text>` | 
 
 - Linked into a hierarchy via `interpretation_hierarchy` table:
-
 | id_interpretation_hierarchy | id_interpretation | id_parent |
 | --- | --- | --- |
 | 14 | 22 | 6 |
@@ -177,7 +176,7 @@ with ID 33).</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Periods
 
-- List of periods, per project. Example records (shortened):
+- List of periods, per project. Examples (shortened):
 | id_period | name | start_year | end_year | id_project |
 | --- | --- | --- | --- | --- |
 | 8 | Iron Age | -1000 | -581 | 2 |
@@ -191,8 +190,52 @@ that different projects have different year ranges for similar periods.</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Finds
 
-TODO
-</script></section><section data-markdown><script type="text/template">
+- Diagnostics and non-diagnostics are both in the `artefacts` table.
+  Examples (shortened):
+| id_artefact | id_artefact_type | id_project |  number |  id_ware | is_diagnostic | weight |
+| --- | --- | --- | --- | --- | --- | --- |
+| 1 | 536 | 2 | 1 | 3 | true | |
+| 24167 | 42 | 3 | 1 | 3 | true | |
+| 35559 | | 4 | 1 | 1 | true | 9 |
+
+- (Ceramic) typologies in the `artefact_types` table.
+
+- Wares in the `wares` table.
+
+<aside class="notes"><p>For the examples I did not display the <code>id_origin</code> (sherd ID in project databases)
+and <code>rhp_notes</code> (RHP implementation details, where applicable) columns.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Artefact types
+
+- Typologies, currently only for ceramics
+
+- Example records:
+| id_artefact_type | name | start_year | end_year |
+| --- | --- | --- | --- |
+| 15 | Hayes 181 | 100 | 300 | 
+| 393 | Dressel 1 | -130 | -10 |
+
+- There is also a `provenance` column which is currently free-form text, and
+  awaits standardisation.
+  
+<aside class="notes"><p>Provenances are being standardised, but it is not completely implemented yet.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Wares
+
+- Ceramic wares
+
+- Example records:
+| id_ware | name | id_parent |
+| --- | --- | --- |
+| 2 | Fine ware | |
+| 3 | Coarse ware | |
+| 23 | Eastern sigillata | 2 |
+| 24 | African red slip ware | 2 |
+| 25 | Impasto chiaro sabbioso | 3 |
+| 26 | Pompeian red ware | 3 |
+
+<aside class="notes"><p>The <code>id_parent</code> column references back into the <code>wares</code> table. So <code>Eastern sigillata</code> is a <code>Fine ware</code> (under <code>2</code>), and <code>Pompeian red ware</code> is a <code>Coarse ware</code> (under <code>3</code>).</p>
+</aside></script></section><section data-markdown><script type="text/template">
 ## Activities
 
 (not fully implemented)
@@ -206,12 +249,11 @@ needs quite a bit of work.</p>
 
 - Coarse ware typology
 
-- Methodology: sampling method, land use, sources
+- Methodology: sampling method, land use, sources (all part of activities)
 
 - (various details of) non-ceramics
 
 - ceramics: fragment types, fabrics, decorations (?)
-
 
 <aside class="notes"><p>This somewhat complements the discussion about the database schema, since in 
 part the schema will need to be updated to accommodate these. Here I want to
@@ -225,7 +267,7 @@ not in the RHPdb.</p>
 - Provenances/productions
 
 <aside class="notes"><p>These lists are (almost) all complete, but I have not yet implemented them
-(TODO 2/1/2021).</p>
+(TODO 2/1/2021). I want to do so later this month.</p>
 </aside></script></section></section><section  data-markdown><script type="text/template">
 # How we got here
 
