--- a/rhp_tech/index.html
+++ b/rhp_tech/index.html
@@ -331,7 +331,6 @@ concrete idea that can be argued about and iterated upon.</p>
 <p>The difference between a mapping and a new typology is also important. The new
 types are defined first, and then a mapping is written. We focus on the mapping
 here, not the new types (that&#39;s for the user session).</p>
-<p>Examples follow in a little bit!</p>
 </aside></script></section><section data-markdown><script type="text/template">
 ## Mapping types
 
@@ -340,47 +339,9 @@ here, not the new types (that&#39;s for the user session).</p>
 
 - In other cases we fully integrate the project-specific data using new RHP
 typologies. Original typologies are not kept.
-</script></section><section data-markdown><script type="text/template">
-## Mapping when original types are kept
 
-- Mapping is used to:
-  - Translate non-English terminology,
-  - Fix common spelling errors,
-  - Insert important meta-data (_e.g._ definitions) not found in the 
-    project-specific database.
-- These mapped (project-specific) values are then placed into a RHP type hierarchy.
-- New records are also inserted, using RHP typologies.
-
-(We used this for site types and periods)
-
-<aside class="notes"><p>This is not a &#39;true&#39; mapping, in the sense that we do not really dispense with
-the old. Nonetheless, half the database consists of these types of records, and
-it is important to understand there are two types of mappings in play.</p>
-<p>We will see an example of this shortly. </p>
-<p>Because we keep the original data insofar possible and also have the new RHP
-records, queries require some nuance to avoid duplicate counting. We will discuss
-that in the user meeting.</p>
+<aside class="notes"><p>Let&#39;s first have a look at two examples!</p>
 </aside></script></section><section data-markdown><script type="text/template">
-## Mapping when original types are not kept
-
-- This is far simpler.
-
-- Mapping takes a project-specific value and transforms it to the appropriate RHP term.
-
-- Controlled vocabulary.
-
-(We did this with finds artefacts, and in general with all well-understood typologies)
-
-<aside class="notes"><p>This is conceptually the easiest type of mapping, because no old values are kept
-at all. Instead, we introduce our own terms for everything and match each 
-project-specific terminology to our terms.</p>
-<p>We map to our new RHP types, so these mappings are very simple. All meta-data
-is with the new type lists, and not present in the project-specific mappings.</p>
-<p>This is <strong>much preferred</strong> over keeping the original records, but cannot always
-be done.</p>
-</aside></script></section><section data-markdown><script type="text/template">
-## Some examples
-</script></section><section data-markdown><script type="text/template">
 ## Sites
 
 - RHPdb has a unified hierarchy _on top of_ project-specific interpretations.
@@ -434,6 +395,44 @@ periodisations.</p>
 RHPdb.</p>
 <p>These sorts of mappings (where the old types are not kept) are very simple, and
 always have at least an <em>in</em> and <em>out</em> column.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Mapping when original types are kept
+
+- Mapping is used to:
+  - Translate non-English terminology,
+  - Fix common spelling errors,
+  - Insert important meta-data (_e.g._ definitions) not found in the 
+    project-specific database.
+- These mapped (project-specific) values are then placed into a RHP type hierarchy.
+- New records are also inserted, using RHP typologies.
+
+(We used this for site types and periods)
+
+<aside class="notes"><p>This is not a &#39;true&#39; mapping, in the sense that we do not really dispense with
+the old. Nonetheless, half the database consists of these types of records, and
+it is important to understand there are two types of mappings in play.</p>
+<p>We will see an example of this shortly. </p>
+<p>Because we keep the original data insofar possible and also have the new RHP
+records, queries require some nuance to avoid duplicate counting. We will discuss
+that in the user meeting.</p>
+</aside></script></section><section data-markdown><script type="text/template">
+## Mapping when original types are not kept
+
+- This is far simpler.
+
+- Mapping takes a project-specific value and transforms it to the appropriate RHP term.
+
+- Controlled vocabulary.
+
+(We did this with finds artefacts, and in general with all well-understood typologies)
+
+<aside class="notes"><p>This is conceptually the easiest type of mapping, because no old values are kept
+at all. Instead, we introduce our own terms for everything and match each 
+project-specific terminology to our terms.</p>
+<p>We map to our new RHP types, so these mappings are very simple. All meta-data
+is with the new type lists, and not present in the project-specific mappings.</p>
+<p>This is <strong>much preferred</strong> over keeping the original records, but cannot always
+be done.</p>
 </aside></script></section></section><section ><section data-markdown><script type="text/template">
 # Populating the database
 
